# pyshell

./: LICENSE  README.md  pyproject.toml
src/: pyshell.py
